fixed small thing with spacing and redid windex

--- a/_css/styles.css
+++ b/_css/styles.css
@@ -369,38 +369,51 @@ input {
   border-bottom: 4px solid rgb(149, 172, 228);
   padding: 30px;
   text-align: center;
+  width: 90%;
 }
 
 .three-sellers img {
   width: 100%;
-  height: auto;
+  height: 580px;
 }
 
 .smart-home {
   text-align: center;
   width: 1360px;
+  height: auto;
 }
 
 .smart-home-title {
   width: 1360px;
 }
 
-.panel-group {
+.windex {
+  width: 1360px;
   display: flex;
-  justify-content: center;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
-.panel-default {
-  border: none;
+.cleaning img {
+  height: auto;
 }
 
-.panel-group .panel+.panel {
-  margin-top: 0px;
+.blue-box {
+  width: 458px;
+  background-color: rgb(0, 91, 140);
+  height: 420px;
+  color: white;
+  font-size: 30px;
 }
 
-.panel-body {
-  padding: 0px;
+.blue-box p {
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+.blue-box h1 {
+  margin-top: 30px;
+  margin-bottom: 15px;
+  margin-left: 10px;
 }
 
 @media (max-width: 767px) {
@@ -587,12 +600,8 @@ input {
     font-size: 20px;
   }
 
-  .smart-columns {
-
-  }
-
-  .three-sellers img {
-
+  .smart-home-title {
+    margin-top: 50px;
   }
 }
 
@@ -605,5 +614,9 @@ input {
 
   .three-sellers img {
     margin-top: 30px;
+  }
+
+  .windex {
+    margin-left: 8px;
   }
 }
